23-01-2015 6.1.17
- Export timeregistration error fixed
- Include ID's in columns for export
- Fixed SMIME decryption of outlook messages
- Fixed IE bug with colorfield in company dialog
- Support repeat on workdays of thunderbird in caldav
- Fixed caldav bug related to case sensitity in the UID database fields
- Document templates failed with special characters in the name on some servers.
- Merge events in calendar was broken
- Ignore unsupported reminder values in icalendar
- Delete task bug in community version
- Uninstall of module did not work completely. Some installed checks still returned true.
- Wrong parent ID in z-push mail folders which prevented sub/sub/sub folders from syncing 

19-01-2015 6.1.16
- Resources not showing

19-01-2015 6.1.15
- $config['calendar_tasklist_show'] option is merge from 6.0
- $config['debug_usernames'] for turning on debug mode for specific users.
- Replace recurring series completely with caldav to avoid problems of buggy clients
- Repeating event with caldav that started on 0:00 hours repeated on wrong weekday
- Replace contact with user in calendar event adds appointment to calendar now.
- Fixed open task from context menu in calendar
- Projects2: button to duplicate incomes and expenses.

12-01-2015 6.1.14
- Billing license check error

07-01-2015 6.1.13
- License check failed in 6.1.12

07-01-2015 6.1.12
- Removed project time entry overlapping check
- Replace namespace delimiter with dash in listeners cache
- Fixed to field in email sent folder in wide view.
- Restored windows binaries for zip and libwbxml
- Automatically delete file when download link expires is available again
- Projects2: added column 'customer' for sub projects.
- Timeregistration: If time is next day was checked the field will be checked when editing the time entry
- Billing: fixed due date for new created recurring events
- Cut attribute lengths when importing tickets
- Deleting task category deleted tasks too.